--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -8,6 +8,8 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/googleMap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+    </fragment>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
