--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,7 +119,7 @@
         android:id="@+id/gpsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="위치정보"
+        android:text="새로고침 버튼을 눌러주세요"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:background="@null" />
